--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="style.css" rel="stylesheet" />
-  <title>DBMonster Benchmark: Inferno</title>
+  <title>Inferno 1.3.0</title>
 </head>
 <body>
 <div id="App"></div>
