--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="App"></div>
-<script src="https://localvoid.github.io/perf-monitor/0.1/perf-monitor.js"></script>
+<script src="https://unpkg.com/perf-monitor@0.4.1/dist/umd/perf-monitor.js"></script>
 <script src="bundle.js" type="text/javascript"></script>
 </body>
 </html>
